--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,13 @@
     <string name="previous">Previous</string>
     <string name="boutonEntree">ENTREES</string>
     <string name="boutonPlats">PLATS</string>
+    <string name="entree">Entrees</string>
+    <string name="plat">Plats</string>
+    <string name="dessert">Desserts</string>
     <string name="boutonDesserts">DESSERTS</string>
+    <string name="commander">commander</string>
+    <string name="enregistrement">Votre commande a été enregistrée</string>
+    <string name="aucun_enregistrement">Vous n\'avez aucun article dans votre panier</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
