"Rectification de nom d'id pour coherence"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
+    <string name="messageAccueil">Bienvenue chez</string>
+    <string name="nomApplication">DroidRestaurant</string>
     <string name="boutonEntree">ENTREES</string>
     <string name="boutonPlats">PLATS</string>
     <string name="entree">Entrees</string>
